# ports

./: .gitignore  Makefile  README.md
.github/workflows/: mozc.yml  mozc.yml.txt
Mk/: bsd.default-versions.mk  bsd.local.post.mk  bsd.local.pre.mk  bsd.overlay.mk  bsd.sites.mk
Mk/Scripts/: actual-package-depends.sh  cargo-crates-git-common.awk  cargo-crates-git-configure.awk  cargo-crates-git-fetch.awk  cargo-crates.awk  check-desktop-entries.sh  check-stagedir.sh  check-vulnerable.sh  check_leftovers.sh  checksum.sh  create-manifest.sh  depends-list.sh  desktop-categories.sh  dialog4ports.sh  do-depends.sh  do-fetch.sh  do-patch.sh  do-users-groups.sh  find-lib.sh  functions.sh  generate-symbols.sh  install-desktop-entries.sh  makesum.sh  plist_sub_sed_sort.sh  ports_env.sh  qa.sh  rust-compat11-canary.sh  security-check.awk  sed_checked.sh  smart_makepatch.sh  split-url.awk  strip_RECORD.py
Mk/Uses/: bazel.mk  cargo.mk  compiler.mk  linux.mk  samba.mk
accessibility/sctd/: Makefile  distinfo
accessibility/speech-dispatcher/: Makefile  pkg-plist
archivers/xarchiver/: Makefile
astro/calcmysky/: Makefile  pkg-plist
astro/google-earth/: Makefile  distinfo  pkg-plist
astro/stellarium/: Makefile  distinfo  pkg-plist
audio/alsa-lib/: Makefile  distinfo  pkg-plist
audio/alsa-plugins/: Makefile  distinfo  pkg-plist
audio/arachno-soundfont/: Makefile  distinfo  pkg-descr
audio/audacity/: Makefile  pkg-plist
audio/fluid-soundfont/: Makefile
audio/osd-lyrics/: Makefile  distinfo  pkg-descr  pkg-plist
audio/timidity++/: Makefile  Makefile.interface
audio/timidity++-emacs/: Makefile
audio/timidity++-gtk/: Makefile
audio/timidity++-motif/: Makefile
audio/timidity++-slang/: Makefile
audio/timidity++-tcltk/: Makefile
audio/timidity++-xaw/: Makefile  pkg-plist
audio/timidity++-xskin/: Makefile
chinese/fcitx/: Makefile
comms/iwmbt-firmware/: Makefile  distinfo  pkg-plist
converters/: fribidi.diff
converters/fribidi/: Makefile  distinfo
databases/tdb/: distinfo
deskutils/orage/: Makefile  distinfo  pkg-plist
deskutils/xfce4-notes-plugin/: Makefile  distinfo  pkg-plist
deskutils/xfce4-notifyd/: Makefile
deskutils/xfce4-tumbler/: Makefile  pkg-plist  pkg-plist1
devel/bazel/: Makefile  distinfo
devel/bazel7/: Makefile  distinfo
devel/compiz-bcop/: Makefile  distinfo  pkg-descr
devel/dbus/: Makefile
devel/glib20/: Makefile
devel/glibmm/: Makefile
devel/gvfs/: Makefile  pkg-plist
devel/kBuild/: Makefile  distinfo
devel/libgsf/: Makefile  distinfo  pkg-plist
devel/linux-c7-libmodman/: Makefile  distinfo  pkg-descr  pkg-plist.amd64  pkg-plist.i386
devel/linux-c7-orc/: Makefile  distinfo  pkg-plist.amd64  pkg-plist.i386
devel/py-gyp/: Makefile  distinfo
devel/py-setuptools_scm/: Makefile
devel/qt5-core/: Makefile
devel/qt6-tools/: Makefile
devel/talloc/: Makefile  distinfo
devel/tevent/: Makefile  distinfo
devel/whither/: Makefile  distinfo  pkg-descr
dns/nss_mdns/: Makefile  distinfo
emulators/virtualbox-ose/: Makefile  distinfo  patch-src_VBox_Runtime_r0drv_freebsd_memobj-r0drv-freebsd.c
emulators/virtualbox-ose-6.0/: Makefile
emulators/virtualbox-ose-6.1/: distinfo
emulators/virtualbox-ose-70/: Makefile  pkg-plist
emulators/virtualbox-ose-71/: Makefile
emulators/virtualbox-ose-72/: Makefile
emulators/virtualbox-ose-additions/: Makefile  distinfo
emulators/virtualbox-ose-additions-nox11-6.0/: Makefile
emulators/virtualbox-ose-kmod/: Makefile  distinfo
emulators/virtualbox-ose-kmod-70/: Makefile
emulators/virtualbox-ose-kmod70/: Makefile  distinfo
emulators/virtualbox-ose-nox11/: Makefile
emulators/virtualbox-ose-nox11-6.0/: Makefile
emulators/virtualbox-ose7/: Makefile  distinfo  pkg-plist
emulators/virtualbox-ose7-kmod/: Makefile  distinfo
emulators/virtualbox-ose70/: Makefile  distinfo  pkg-plist
japanese/: Makefile.inc
japanese/mozc-server-bzlmod/files/: mozc_tool.in  patch-src_MODULE.bazel  patch-src_WORKSPACE.bazel
japanese/mozc-server.5160/files/: patch-src_WORKSPACE.bazel  patch-src_base_logging.cc  patch-src_build__tools_util.py  patch-src_ipc_unix__ipc.cc  patch-src_unix_emacs_mozc.el
japanese/mozc-server/files/: bazelrc  extra-patch-merge-ut-dictionaries.py  extra-patch-merge_dictionaries.py  extra-patch-src_MODULE.bazel  extra-patch-src_pkg_config_repository.bzl  extra-patch-src_unix_uim_BUILD.bazel  extra-patch-src_unix_uim_key__translator.cc  extra-patch-src_unix_uim_key__translator.h  extra-patch-src_unix_uim_mozc.cc  mozc.in  patch-src_.bazelrc  patch-src_BUILD.bazel  patch-src_MODULE.bazel  patch-src_WORKSPACE.bazel  patch-src_base_gen__config__file__stream__data.py  patch-src_base_init__mozc.cc  patch-src_base_logging.cc  patch-src_base_system__util.cc  patch-src_bazel_pkg__config__repository.bzl  patch-src_build__mozc.py  patch-src_build__tools_code__generator__util.py  patch-src_build__tools_embed__file.py  patch-src_build__tools_redirect.py  patch-src_build__tools_util.py  patch-src_composer_internal_gen__typing__model.py  patch-src_data__manager_gen__connection__data.py  patch-src_data_symbol_symbol.tsv  patch-src_dictionary_gen__pos__map.py  patch-src_dictionary_gen__zip__code__seed.py  patch-src_dictionary_zip__code__util.py  patch-src_gui_character__pad_data_gen__cp932__map.py  patch-src_gui_character__pad_data_gen__local__character__map.py  patch-src_gui_character__pad_data_gen__unicode__data.py  patch-src_ipc_ipc__path__manager.cc  patch-src_ipc_unix__ipc.cc  patch-src_prediction_gen__zero__query__data.py  patch-src_prediction_gen__zero__query__util.py  patch-src_rewriter_gen__counter__suffix__array.py  patch-src_rewriter_gen__reading__correction__data.py  patch-src_rewriter_gen__single__kanji__rewriter__data.py  (+6 more)
japanese/mozc-tool/files/: BUILD.qt_linux.bazel  WORKSPACE.bazel
mail/: postgrey
multimedia/: avidemux
net/: intel-ixl-kmod
ports.conf.d/: ccache.conf  default_versions.conf  fetch.conf  local.conf  modules.conf  options.conf  overlays.conf  ports.conf  site.conf  sudo.conf
sysutils/: e2fsprogs
x11-fonts/: Makefile
(+881 files in other folders)
