--- src/MODULE.bazel.orig	2024-10-10 07:39:31 UTC
+++ src/MODULE.bazel
@@ -48,6 +48,7 @@ bazel_dep(
     name = "rules_python",
     version = "0.34.0",
 )
+register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")
 
 # Bazel macOS build (3.5.1 2024-04-09)
 # Note, versions after 3.5.1 result a build failure of universal binary.
@@ -146,6 +147,7 @@ pkg_config_repository(
         "Qt6Core",
         "Qt6Gui",
         "Qt6Widgets",
+        "libglvnd",
     ],
 )
 
@@ -271,20 +273,18 @@ SHA256_ZIP_CODE_KEN_ALL = None
 # SHA256_ZIP_CODE_KEN_ALL = "e5a32c0199ebc890ea5c48c06fd817a168b26d68ce1c3a86ba0ae1cdf6c2d1c4"
 SHA256_ZIP_CODE_KEN_ALL = None
 
-http_archive(
+new_local_repository(
     name = "zip_code_ken_all",
     build_file_content = "exports_files([\"KEN_ALL.CSV\"])",
-    sha256 = SHA256_ZIP_CODE_KEN_ALL,
-    url = "https://www.post.japanpost.jp/zipcode/dl/kogaki/zip/ken_all.zip",
+    path = "third_party",
 )
 
 # SHA256 as of 2024-10-08
 # SHA256_ZIP_CODE_JIGYOSYO = "5d52511ce6613fcc0c5b24ac59b463e927cff76ac466c2ae07a511a64bb5913f"
 SHA256_ZIP_CODE_JIGYOSYO = None
 
-http_archive(
+new_local_repository(
     name = "zip_code_jigyosyo",
     build_file_content = "exports_files([\"JIGYOSYO.CSV\"])",
-    sha256 = SHA256_ZIP_CODE_JIGYOSYO,
-    url = "https://www.post.japanpost.jp/zipcode/dl/jigyosyo/zip/jigyosyo.zip",
+    path = "third_party",
 )
