--- src/WORKSPACE.bazel.orig	2023-05-09 02:54:28 UTC
+++ src/WORKSPACE.bazel
@@ -36,17 +36,20 @@ py_repositories()
 
 # Abseil
 # https://abseil.io/docs/cpp/quickstart#set-up-a-bazel-workspace-to-work-with-abseil
-local_repository(
+load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
+# This git_repository rule is an alternative for the above rule.
+git_repository(
     name = "com_google_absl",
-    path = "third_party/abseil-cpp",
+    remote = "https://github.com/abseil/abseil-cpp.git",
+    tag = "20230125.3"  # 2023-01-25
 )
 
-
 # Protocol Buffers
 # https://github.com/protocolbuffers/protobuf/blob/main/examples/WORKSPACE
-local_repository(
+git_repository(
     name = "com_google_protobuf",
-    path = "third_party/protobuf",
+    remote = "https://github.com/protocolbuffers/protobuf.git",
+    tag = "v3.22.5",  # 2023-05-10
 )
 load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
 protobuf_deps()
