--- src/WORKSPACE.bazel.orig	2023-09-02 11:09:28 UTC
+++ src/WORKSPACE.bazel
@@ -130,7 +130,7 @@ new_local_repository(
 # Qt for Linux
 pkg_config_repository(
   name = "qt_linux",
-  packages = ["Qt6Core", "Qt6Gui", "Qt6Widgets"],
+  packages = ["Qt6Core", "Qt6Gui", "Qt6Widgets", "libglvnd"],
 )
 
 # Qt for macOS
