--- src/WORKSPACE.bazel.orig	2023-09-02 11:09:28 UTC
+++ src/WORKSPACE.bazel
@@ -211,7 +211,7 @@ pkg_config_repository(
 # Qt for Linux
 pkg_config_repository(
   name = "qt_linux",
-  packages = ["Qt6Core", "Qt6Gui", "Qt6Widgets"],
+  packages = ["Qt6Core", "Qt6Gui", "Qt6Widgets", "libglvnd"],
 )
 
 # Qt for macOS
