package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "qt_linux",
    hdrs = glob([
        "include/**",
        "include/GL/**",
        "include/qt/**",
    ]),
    copts = ["-pthread"],
    srcs = glob(["lib/qt5/libQt5*"]),
    includes = [
        "include",
        "include/Gl",
        "include/qt5/QtCore",
        "include/qt5/QtGui",
        "include/qt5/QtWidgets",
    ],
    linkopts = [
        "-lQt5Core",
        "-lQt5Gui",
        "-lQt5Widgets",
    ],
)

exports_files(glob(["bin/*"]))
